test-suite/valid/basic/object.jyml
# Basic object test
"name": "John"
"age": 30
"active": true