test-suite/invalid/structure/unquoted-key.jyml
# Invalid: unquoted object key
name: "Alice"
age: 25